--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -68,23 +68,28 @@
   </mat-card-content>
 </mat-card>
 
-<mat-card style="width: 100%; margin-top: 50px">
+<mat-card style="width: 100%; margin-top: 50px" *ngIf="!(participantsService.locked | async)">
   <mat-card-header>
     <mat-card-title>Start competition</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <div class="flex-row" *ngIf="!(participantsService.locked | async)">
-      <p class="flex-fill">In order to start the first round, you have to lock the participants. Once started, the participants can only be edited by resetting the competion.</p>
-      <div class="flex-fill"></div>
-      <button mat-raised-button color="primary" class="flex-auto" type="button" (click)="lock()">
-        Lock participants
-      </button>
-    </div>
-
-    <div class="flex-row" *ngIf="participantsService.locked | async">
-      <p class="flex-fill">The competition has been started. You cannot edit participants without resetting the competition.</p>
-      <div class="flex-fill"></div>
-      <a class="flex-auto" mat-raised-button color="primary" routerLink="../rounds">Show rounds</a>
-      </div>
+    <p>In order to start the first round, you have to lock the participants. Once started, the participants can only be edited by resetting the competion.</p>
   </mat-card-content>
+  <mat-card-actions align="end">
+    <button mat-raised-button color="primary" class="flex-auto" type="button" (click)="lock()">
+      Lock participants
+    </button>
+  </mat-card-actions>
+</mat-card>
+
+<mat-card style="width: 100%; margin-top: 50px" *ngIf="(participantsService.locked | async)">
+  <mat-card-header>
+    <mat-card-title>Participants locked</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>The competition has been started. You cannot edit participants without resetting the competition.</p>
+  </mat-card-content>
+  <mat-card-actions align="end">
+    <a class="flex-auto" mat-raised-button color="primary" routerLink="../rounds">Show rounds</a>
+  </mat-card-actions>
 </mat-card>
