--- a/src/app/rounds/rounds.component.html
+++ b/src/app/rounds/rounds.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="!(roundsService.active | async)">
+<mat-card *ngIf="!(roundsService.active | async); else roundsView">
   <mat-card-header>
     <mat-card-title>Participants not locked</mat-card-title>
   </mat-card-header>
@@ -9,3 +9,30 @@
     <a mat-raised-button color="primary" class="flex-auto" type="button" routerLink="../participants">Show participants</a>
   </mat-card-actions>
 </mat-card>
+
+<ng-template #roundsView>
+  <mat-card style="width: 100%">
+    <mat-card-header>
+      <mat-card-title>Create next round</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form [formGroup]="nextRoundFormGroup">
+        <div class="flex-row-wrap">
+          <mat-form-field appearance="fill" class="flex-auto">
+            <mat-label>Number of heats</mat-label>
+            <input matInput type="number" min="1" formControlName="heats">
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="flex-auto" *ngFor="let formControl of nextRoundFormGroup.controls.heatSizes.controls; index as idx">
+            <mat-label>Size of heat #{{ idx + 1 }}</mat-label>
+            <input matInput type="number" min="1" [formControl]="formControl">
+          </mat-form-field>
+        </div>
+      </form>
+
+    </mat-card-content>
+    <mat-card-actions align="end">
+      <a class="flex-auto" mat-raised-button color="primary">Suggest new draw</a>
+    </mat-card-actions>
+  </mat-card>
+</ng-template>
