--- a/src/app/rounds/rounds.component.html
+++ b/src/app/rounds/rounds.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="!(roundsService.active | async); else roundsView">
+<mat-card *ngIf="!(roundsService.active | async)">
   <mat-card-header>
     <mat-card-title>Participants not locked</mat-card-title>
   </mat-card-header>
@@ -11,9 +11,27 @@
 </mat-card>
 
 <ng-template #roundsView>
-  <mat-card style="width: 100%">
+</ng-template>
+
+<ng-container *ngFor="let round of (roundsService.rounds | async)">
+  <mat-card style="width: 100%" *ngIf="round.state === 'EVALUATED'">
     <mat-card-header>
-      <mat-card-title>Create next round</mat-card-title>
+      <mat-card-title>Previous round: #{{round.number + 1}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      RESULTS
+    </mat-card-content>DRAFT
+  </mat-card>
+
+  <mat-card style="width: 100%" *ngIf="round.state === 'STARTED'">
+    <mat-card-header>
+      <mat-card-title>Current round: #{{round.number + 1}}</mat-card-title>
+    </mat-card-header>
+  </mat-card>
+
+  <mat-card style="width: 100%" *ngIf="round.state === 'DRAFT'">
+    <mat-card-header>
+      <mat-card-title>Next round: #{{round.number + 1}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form [formGroup]="nextRoundFormGroup">
@@ -35,4 +53,4 @@
       <a class="flex-auto" mat-raised-button color="primary">Suggest new draw</a>
     </mat-card-actions>
   </mat-card>
-</ng-template>
+</ng-container>
