--- a/src/app/rounds/rounds.component.html
+++ b/src/app/rounds/rounds.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="!(roundsService.active | async)">
+<mat-card class="main-card" *ngIf="participantsService.unlocked | async">
   <mat-card-header>
     <mat-card-title>Participants not locked</mat-card-title>
   </mat-card-header>
@@ -10,11 +10,8 @@
   </mat-card-actions>
 </mat-card>
 
-<ng-template #roundsView>
-</ng-template>
-
 <ng-container *ngFor="let round of (roundsService.rounds | async)">
-  <mat-card style="width: 100%" *ngIf="round.state === 'EVALUATED'">
+  <mat-card class="main-card" *ngIf="round.state === 'EVALUATED'">
     <mat-card-header>
       <mat-card-title>Previous round: #{{round.number + 1}}</mat-card-title>
     </mat-card-header>
@@ -23,13 +20,13 @@
     </mat-card-content>DRAFT
   </mat-card>
 
-  <mat-card style="width: 100%" *ngIf="round.state === 'STARTED'">
+  <mat-card class="main-card" *ngIf="round.state === 'STARTED'">
     <mat-card-header>
       <mat-card-title>Current round: #{{round.number + 1}}</mat-card-title>
     </mat-card-header>
   </mat-card>
 
-  <mat-card style="width: 100%" *ngIf="round.state === 'DRAFT'">
+  <mat-card class="main-card" *ngIf="round.state === 'DRAFT'">
     <mat-card-header>
       <mat-card-title>Next round: #{{round.number + 1}}</mat-card-title>
     </mat-card-header>
@@ -42,15 +39,57 @@
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="flex-auto" *ngFor="let formControl of nextRoundFormGroup.controls.heatSizes.controls; index as idx">
-            <mat-label>Size of heat #{{ idx + 1 }}</mat-label>
+            <mat-label>Couples in heat #{{ idx + 1 }}</mat-label>
             <input matInput type="number" min="1" [formControl]="formControl">
           </mat-form-field>
         </div>
       </form>
+      <p class="mat-small mat-error" *ngIf="nextRoundFormGroup.getError('heatsize-mismatch') > 0">
+        Heatsize mismatch: You require {{ nextRoundFormGroup.getError('heatsize-mismatch') }} couple(s) too many for
+        this round.
+      </p>
+      <p class="mat-small mat-error" *ngIf="nextRoundFormGroup.getError('heatsize-mismatch') < 0">
+        Heatsize mismatch: You require {{ -1 * nextRoundFormGroup.getError('heatsize-mismatch') }} couple(s) too little
+        for this round.
+      </p>
+
+      <ng-container *ngFor="let couples of round.heats; index as idx">
+        <h1>Heat #{{ idx + 1}}</h1>
+        <table mat-table [dataSource]="couples">
+
+          <ng-container matColumnDef="lead">
+            <th mat-header-cell *matHeaderCellDef>Lead</th>
+            <td mat-cell *matCellDef="let element">{{element.lead}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="follow">
+            <th mat-header-cell *matHeaderCellDef>Follow</th>
+            <td mat-cell *matCellDef="let element">{{element.follow}}</td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="[ 'lead', 'follow' ]"></tr>
+          <tr mat-row *matRowDef="let row; columns: [ 'lead', 'follow' ];"></tr>
+        </table>
+      </ng-container>
 
     </mat-card-content>
     <mat-card-actions align="end">
-      <a class="flex-auto" mat-raised-button color="primary">Suggest new draw</a>
+      <button type="button" class="flex-auto" mat-raised-button color="primary"
+              (click)="roundsService.suggestDraw($any(this.nextRoundFormGroup.controls.heatSizes.value)).subscribe()"
+              [disabled]="nextRoundFormGroup.invalid">Suggest new draw
+      </button>
     </mat-card-actions>
   </mat-card>
 </ng-container>
+
+<mat-card class="main-card" *ngIf="participantsService.locked | async">
+  <mat-card-content>
+    <p>You can reset the rounds to unlock the participants. However, all rounds so far will be lost and will have to be
+      re-danced.</p>
+  </mat-card-content>
+  <mat-card-actions align="end">
+    <a mat-raised-button color="primary" class="flex-auto" type="button"
+       (click)="participantsService.unlock().subscribe()">Reset rounds</a>
+  </mat-card-actions>
+
+</mat-card>
