--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,3 +35,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   @extend .flex-item;
   flex: 0 0 auto;
 }
+
+.main-card {
+  width: 100%;
+  margin-top: 25px;
+}
