feat: started round view

--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -46,7 +46,7 @@
           <input matInput formControlName="lastName" name="lastName">
         </mat-form-field>
 
-        <mat-form-field>
+        <mat-form-field appearance="fill">
           <mat-label>Role</mat-label>
           <mat-select formControlName="role" name="role">
             <mat-option value="LEAD">Lead</mat-option>
