--- a/src/app/rounds/draft-round-component/draft-round-component.component.html
+++ b/src/app/rounds/draft-round-component/draft-round-component.component.html
@@ -7,8 +7,8 @@
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="flex-auto"
-                    *ngFor="let formControl of formGroup.controls.heatSizes.controls; index as idx">
-      <mat-label>Couples in heat #{{ idx + 1 }}</mat-label>
+                    *ngFor="let formControl of formGroup.controls.heatSizes.controls; index as heatIdx">
+      <mat-label>Couples in heat #{{ heatIdx + 1 }}</mat-label>
       <input matInput type="number" min="1" [formControl]="formControl">
     </mat-form-field>
   </div>
@@ -22,12 +22,11 @@
   for this round.
 </p>
 
-<ng-container *ngFor="let couples of heats; index as idx; trackBy: idx">
-  <h1>Heat #{{ idx + 1}}</h1>
+<ng-container *ngFor="let couples of heats; index as heatIdx; trackBy: idx">
   <table mat-table [dataSource]="couples" [trackBy]="id">
 
     <ng-container matColumnDef="lead">
-      <th mat-header-cell *matHeaderCellDef>Lead</th>
+      <th mat-header-cell *matHeaderCellDef>Heat #{{ heatIdx + 1}}, Lead</th>
       <td mat-cell *matCellDef="let element">{{element.lead}}</td>
     </ng-container>
 
