--- a/src/app/rounds/draft-round-component/draft-round.component.html
+++ b/src/app/rounds/draft-round-component/draft-round.component.html
@@ -22,11 +22,11 @@
   for this round.
 </p>
 
-<ng-container *ngFor="let couples of heats; index as heatIdx; trackBy: idx">
-  <table mat-table [dataSource]="couples" [trackBy]="id">
+<ng-container *ngFor="let heat of heats; index as heatIdx; trackBy: idx">
+  <table mat-table [dataSource]="heat.couples" [trackBy]="id">
 
     <ng-container matColumnDef="lead">
-      <th mat-header-cell *matHeaderCellDef>Heat #{{ heatIdx + 1}}, Lead</th>
+      <th mat-header-cell *matHeaderCellDef>{{ heat.dance }}, heat #{{ heat.id }}, Lead</th>
       <td mat-cell *matCellDef="let element">{{element.lead}}</td>
     </ng-container>
 
