--- a/src/app/rounds/evaluated-round/evaluated-round.component.html
+++ b/src/app/rounds/evaluated-round/evaluated-round.component.html
@@ -2,7 +2,7 @@
 
   <ng-container matColumnDef="position">
     <th mat-header-cell *matHeaderCellDef>Position</th>
-    <td mat-cell *matCellDef="let element; index as idx">{{idx}}</td>
+    <td mat-cell *matCellDef="let element; index as idx">{{idx + 1}}</td>
   </ng-container>
 
   <ng-container matColumnDef="lead">
@@ -23,7 +23,7 @@
 
   <ng-container matColumnDef="position">
     <th mat-header-cell *matHeaderCellDef>Position</th>
-    <td mat-cell *matCellDef="let element; index as idx">{{idx}}</td>
+    <td mat-cell *matCellDef="let element; index as idx">{{idx + 1}}</td>
   </ng-container>
 
   <ng-container matColumnDef="follow">
@@ -40,7 +40,7 @@
   <tr mat-row *matRowDef="let row; columns: [ 'position', 'follow', 'points' ]; index as idx" [class]="idx < (numberOfCouplesFormControl.value ?? 0) ? 'qualified' : 'not-qualified'"></tr>
 </table>
 
-<div class="flex-row">
+<div class="flex-row" *ngIf="(roundsService.currentRound | async)?.id == round?.id">
   <div class="flex-auto" style="min-width: max(50%, 500px)"></div>
   <mat-form-field class="flex-fill">
     <mat-label>Number of couples in next round</mat-label>
