--- a/src/app/rounds/rounds.component.html
+++ b/src/app/rounds/rounds.component.html
@@ -10,15 +10,15 @@
   </mat-card-actions>
 </mat-card>
 
-<ng-container *ngFor="let round of (roundsService.rounds | async); trackBy: id">
+<ng-container *ngFor="let round of (roundsService.rounds | async); trackBy: id;">
   <mat-card class="main-card" *ngIf="round.state === 'EVALUATED'">
     <mat-card-header>
-      <mat-card-title>Evaluated round: #{{round.number + 1}}</mat-card-title>
+      <mat-card-title>Evaluated round: #{{round.number}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <app-evaluated-round #evaluatedRounds [round]="round"></app-evaluated-round>
     </mat-card-content>
-    <mat-card-actions align="end">
+    <mat-card-actions align="end" *ngIf="(roundsService.currentRound | async)?.id == round.id">
       <button type="button" class="flex-auto" mat-raised-button color="primary"
               (click)="roundsService.nextRound(evaluatedRounds.forStorage()).subscribe()"
               [disabled]="evaluatedRounds.invalid">Prepare next round</button>
@@ -27,7 +27,7 @@
 
   <mat-card class="main-card" *ngIf="round.state === 'STARTED'">
     <mat-card-header>
-      <mat-card-title>Current round: #{{round.number + 1}}</mat-card-title>
+      <mat-card-title>Current round: #{{round.number}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <app-started-round-component #startedRounds [round]="round"></app-started-round-component>
@@ -42,7 +42,7 @@
 
   <mat-card class="main-card" *ngIf="round.state === 'DRAFT'">
     <mat-card-header>
-      <mat-card-title>Next round: #{{round.number + 1}}</mat-card-title>
+      <mat-card-title>Next round: #{{round.number}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <app-draft-round-component #draftRounds [round]="round"></app-draft-round-component>
