--- a/src/app/rounds/rounds.component.html
+++ b/src/app/rounds/rounds.component.html
@@ -11,14 +11,14 @@
 </mat-card>
 
 <ng-container *ngFor="let round of (roundsService.rounds | async); trackBy: id;">
-  <mat-card class="main-card" *ngIf="round.state === 'EVALUATED'">
+  <mat-card class="main-card" *ngIf="round.state === 'EVALUATED' || round.state === 'SUPERSEEDED'">
     <mat-card-header>
       <mat-card-title>Evaluated round: #{{round.number}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <app-evaluated-round #evaluatedRounds [round]="round"></app-evaluated-round>
     </mat-card-content>
-    <mat-card-actions align="end" *ngIf="(roundsService.currentRound | async)?.id == round.id">
+    <mat-card-actions align="end" *ngIf="round?.state === 'EVALUATED'">
       <button type="button" class="flex-auto" mat-raised-button color="primary"
               (click)="roundsService.nextRound(evaluatedRounds.forStorage()).subscribe()"
               [disabled]="evaluatedRounds.invalid">Prepare next round</button>
@@ -34,7 +34,7 @@
     </mat-card-content>
     <mat-card-actions align="end">
       <button type="button" class="flex-auto" mat-raised-button color="primary"
-              (click)="roundsService.evaluateRound(startedRounds.forStorage()).subscribe()"
+              (click)="roundsService.evaluateRound(round, startedRounds.forStorage()).subscribe()"
               [disabled]="startedRounds.invalid">Evaluate round
       </button>
     </mat-card-actions>
@@ -53,7 +53,7 @@
               [disabled]="draftRounds.invalid">Suggest new draw
       </button>
       <button type="button" class="flex-auto" mat-raised-button color="primary"
-              (click)="roundsService.startRound().subscribe()"
+              (click)="roundsService.startRound(round).subscribe()"
               [disabled]="round.heats.length === 0">Start round
       </button>
     </mat-card-actions>
