refactor: split rounds into current and previous

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <a mat-button routerLink="">{{ title | uppercase }}</a>
   <ul class="nav-list">
     <li><a mat-button routerLink="participants">Participants</a></li>
-    <li><a mat-button routerLink="rounds">Rounds</a></li>
+    <li><a mat-button routerLink="current-rounds">Current round</a></li>
+    <li><a mat-button routerLink="previous-rounds">Previous rounds</a></li>
   </ul>
 </mat-toolbar>
 
