--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="flex-row">
+<mat-toolbar color="primary" class="flex-row no-print">
   <a mat-button routerLink="" class="flex-auto">{{ title | uppercase }}</a>
   <ul class="nav-list flex-fill">
     <li><a mat-button routerLink="participants">Participants</a></li>
