--- a/src/app/previous-rounds/previous-rounds.component.html
+++ b/src/app/previous-rounds/previous-rounds.component.html
@@ -1,12 +1,8 @@
 <ng-container *ngFor="let round of (roundsService.rounds | async); trackBy: id;">
-  <mat-card class="main-card" *ngIf="round.state === 'SUPERSEEDED'">
-    <mat-card-header>
-      <mat-card-title>Evaluated round: #{{round.number}}</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <app-evaluated-round #evaluatedRounds [round]="round"></app-evaluated-round>
-    </mat-card-content>
-  </mat-card>
+  <ng-container class="main-card" *ngIf="round.state === 'SUPERSEDED'">
+    <h2>Round #{{round.number}}</h2>
+    <app-evaluated-round #evaluatedRounds [round]="round"></app-evaluated-round>
+  </ng-container>
 </ng-container>
 
 <mat-card class="main-card" *ngIf="noPreviousRounds | async">
