--- a/src/app/shared/started-round/started-round.component.html
+++ b/src/app/shared/started-round/started-round.component.html
@@ -3,18 +3,15 @@
   <table mat-table [dataSource]="heat.couples" [trackBy]="id">
 
     <ng-container matColumnDef="lead">
-      <th mat-header-cell *matHeaderCellDef>Lead</th>
       <td mat-cell *matCellDef="let element">{{element.lead}}</td>
     </ng-container>
 
     <ng-container matColumnDef="follow">
-      <th mat-header-cell *matHeaderCellDef>Follow</th>
       <td mat-cell *matCellDef="let element">{{element.follow}}</td>
     </ng-container>
 
     <ng-container matColumnDef="points">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element; index as coupleIdx">
+      <td mat-cell *matCellDef="let element; index as coupleIdx" class="no-print">
         <mat-form-field appearance="fill">
           <mat-label>Points</mat-label>
           <input matInput type="number" min="0" [formControl]="formArray.at(heatIdx).at(coupleIdx)">
@@ -22,7 +19,6 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="[ 'lead', 'follow', 'points' ]"></tr>
     <tr mat-row *matRowDef="let row; columns: [ 'lead', 'follow', 'points' ];"></tr>
   </table>
 </ng-container>
