--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,8 +47,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   margin-top: 25px;
 }
 
-@media print {
-  table {
-    page-break-inside: avoid;
-  }
+h1, h2, h3, h4 {
+  break-after: avoid-page;
 }
+
+table {
+  break-inside: avoid;
+}
+
