--- a/src/app/current-rounds/current-rounds.component.html
+++ b/src/app/current-rounds/current-rounds.component.html
@@ -24,7 +24,7 @@
   <h1 *ngIf="round.state !== 'SUPERSEDED'">Round #{{round.number}}</h1>
   <ng-container *ngIf="round.state === 'EVALUATED'">
     <app-evaluated-round #evaluatedRounds [round]="round"></app-evaluated-round>
-    <div class="flex-row no-print">
+    <div class="flex-row no-print actions">
       <button type="button" class="flex-auto" mat-button
               (click)="roundsService.finishRound(evaluatedRounds.forStorage(), false).subscribe()"
               [disabled]="evaluatedRounds.invalid">End competition</button>
@@ -38,23 +38,27 @@
   <ng-container *ngIf="round.state === 'STARTED'">
     <app-started-round-component #startedRounds [round]="round"></app-started-round-component>
 
-    <div class="flex-row no-print">
+    <div class="flex-row no-print actions">
+      <button type="button" class="flex-auto" mat-button
+              (click)="roundsService.evaluateRound(round).subscribe()"
+              [disabled]="startedRounds.hasMarks">Evaluate round
+      </button>
       <div class="flex-fill"></div>
       <button type="button" class="flex-auto" mat-raised-button color="primary"
-              (click)="roundsService.evaluateRound(round, startedRounds.forStorage()).subscribe()"
-              [disabled]="startedRounds.invalid">Evaluate round
+              (click)="startedRounds.addPoints().subscribe()" [disabled]="!startedRounds.hasMarks">
+        Add points
       </button>
     </div>
   </ng-container>
 
   <ng-container *ngIf="round.state === 'DRAFT'">
     <app-draft-round-component #draftRounds [round]="round"></app-draft-round-component>
-    <div class="flex-row no-print">
-      <div class="flex-fill"></div>
-      <button type="button" class="flex-auto" mat-raised-button color="primary"
+    <div class="flex-row no-print actions">
+      <button type="button" class="flex-auto" mat-button
               (click)="roundsService.suggestDraw(draftRounds.heatSizes).subscribe()"
               [disabled]="draftRounds.invalid">Suggest new draw
       </button>
+      <div class="flex-fill"></div>
       <button type="button" class="flex-auto" mat-raised-button color="primary"
               (click)="roundsService.startRound(round).subscribe()"
               [disabled]="round.heats.length === 0">Start round
