--- a/src/app/shared/started-round/started-round.component.html
+++ b/src/app/shared/started-round/started-round.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngFor="let heat of heats; index as heatIdx; trackBy: idx">
-  <h2>{{ heat.dance }}, heat #{{ heat.id }}</h2>
+  <h2>{{ heat.dance }}, heat #{{ heat.number }}</h2>
   <table mat-table [dataSource]="heat.couples" [trackBy]="id">
 
     <ng-container matColumnDef="lead">
@@ -12,13 +12,16 @@
 
     <ng-container matColumnDef="points">
       <td mat-cell *matCellDef="let element; index as coupleIdx" class="no-print">
-        <mat-form-field appearance="fill">
-          <mat-label>Points</mat-label>
-          <input matInput type="number" min="0" [formControl]="formArray.at(heatIdx).at(coupleIdx)">
-        </mat-form-field>
+        {{ element.points }}
       </td>
     </ng-container>
 
-    <tr mat-row *matRowDef="let row; columns: [ 'lead', 'follow', 'points' ];"></tr>
+    <ng-container matColumnDef="switches">
+      <td mat-cell *matCellDef="let element; index as coupleIdx" class="no-print">
+        <mat-slide-toggle [formControl]="formArray.at(heatIdx).at(coupleIdx)"></mat-slide-toggle>
+      </td>
+    </ng-container>
+
+    <tr mat-row *matRowDef="let row; columns: [ 'lead', 'follow', 'points', 'switches' ];"></tr>
   </table>
 </ng-container>
