--- a/src/app/shared/evaluated-round/evaluated-round.component.html
+++ b/src/app/shared/evaluated-round/evaluated-round.component.html
@@ -12,7 +12,7 @@
 
   <ng-container matColumnDef="points">
     <th mat-header-cell *matHeaderCellDef>Follow</th>
-    <td mat-cell *matCellDef="let element">{{element.points}}</td>
+    <td mat-cell *matCellDef="let element">{{element.points | number:'1.4'}}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="[ 'position', 'lead', 'points' ]"></tr>
@@ -33,7 +33,7 @@
 
   <ng-container matColumnDef="points">
     <th mat-header-cell *matHeaderCellDef>Points</th>
-    <td mat-cell *matCellDef="let element">{{element.points}}</td>
+    <td mat-cell *matCellDef="let element">{{element.points | number:'1.4'}}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="[ 'position', 'follow', 'points' ]"></tr>
