--- a/src/app/shared/started-round/started-round.component.html
+++ b/src/app/shared/started-round/started-round.component.html
@@ -12,7 +12,7 @@
 
     <ng-container matColumnDef="points">
       <td mat-cell *matCellDef="let element; index as coupleIdx" class="no-print">
-        {{ element.points }}
+        {{ element.points | number:'1.4' }}
       </td>
     </ng-container>
 
