--- a/src/app/shared/draft-round-component/draft-round.component.html
+++ b/src/app/shared/draft-round-component/draft-round.component.html
@@ -24,14 +24,14 @@
 
 <ng-container *ngFor="let heat of heats; index as heatIdx; trackBy: idx">
   <h2>{{ heat.dance }}, heat #{{ heat.number }}</h2>
-  <table mat-table [dataSource]="heat.couples" [trackBy]="id">
+  <table mat-table [dataSource]="heat.couples" [trackBy]="id" [fixedLayout]="true">
 
     <ng-container matColumnDef="lead">
-      <td mat-cell *matCellDef="let element">{{element.lead}}</td>
+      <td mat-cell *matCellDef="let element" style="width: 50%">{{element.lead | participant}}</td>
     </ng-container>
 
     <ng-container matColumnDef="follow">
-      <td mat-cell *matCellDef="let element">{{element.follow}}</td>
+      <td mat-cell *matCellDef="let element" style="width: 50%">{{element.follow | participant}}</td>
     </ng-container>
 
     <tr mat-row *matRowDef="let row; columns: [ 'lead', 'follow' ];"></tr>
