--- a/src/app/shared/evaluated-round/evaluated-round.component.html
+++ b/src/app/shared/evaluated-round/evaluated-round.component.html
@@ -1,17 +1,17 @@
-<table mat-table [dataSource]="results.leads" [trackBy]="id">
+<table mat-table [dataSource]="results.leads" [trackBy]="id" [fixedLayout]="true">
 
   <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef>Position</th>
+    <th mat-header-cell *matHeaderCellDef style="width: 75px">Position</th>
     <td mat-cell *matCellDef="let element; index as idx">{{idx + 1}}</td>
   </ng-container>
 
   <ng-container matColumnDef="lead">
     <th mat-header-cell *matHeaderCellDef>Lead</th>
-    <td mat-cell *matCellDef="let element">{{element.id}}</td>
+    <td mat-cell *matCellDef="let element">{{element.id | participant}}</td>
   </ng-container>
 
   <ng-container matColumnDef="points">
-    <th mat-header-cell *matHeaderCellDef>Follow</th>
+    <th mat-header-cell *matHeaderCellDef style="width: 75px">Points</th>
     <td mat-cell *matCellDef="let element">{{element.points | number:'1.4'}}</td>
   </ng-container>
 
@@ -19,20 +19,20 @@
   <tr mat-row *matRowDef="let row; columns: [ 'position', 'lead', 'points' ]; index as idx" [class]="qualified(idx) ? 'qualified' : 'not-qualified'"></tr>
 </table>
 
-<table mat-table [dataSource]="results.follows" [trackBy]="id">
+<table mat-table [dataSource]="results.follows" [trackBy]="id" [fixedLayout]="true">
 
   <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef>Position</th>
+    <th mat-header-cell *matHeaderCellDef style="width: 75px">Position</th>
     <td mat-cell *matCellDef="let element; index as idx">{{idx + 1}}</td>
   </ng-container>
 
   <ng-container matColumnDef="follow">
     <th mat-header-cell *matHeaderCellDef>Follow</th>
-    <td mat-cell *matCellDef="let element">{{element.id}}</td>
+    <td mat-cell *matCellDef="let element">{{element.id | participant}}</td>
   </ng-container>
 
   <ng-container matColumnDef="points">
-    <th mat-header-cell *matHeaderCellDef>Points</th>
+    <th mat-header-cell *matHeaderCellDef style="width: 75px">Points</th>
     <td mat-cell *matCellDef="let element">{{element.points | number:'1.4'}}</td>
   </ng-container>
 
