--- a/src/app/shared/started-round/started-round.component.html
+++ b/src/app/shared/started-round/started-round.component.html
@@ -1,23 +1,23 @@
 <ng-container *ngFor="let heat of heats; index as heatIdx; trackBy: idx">
   <h2>{{ heat.dance }}, heat #{{ heat.number }}</h2>
-  <table mat-table [dataSource]="heat.couples" [trackBy]="id">
+  <table mat-table [dataSource]="heat.couples" [trackBy]="id" [fixedLayout]="true">
 
     <ng-container matColumnDef="lead">
-      <td mat-cell *matCellDef="let element">{{element.lead}}</td>
+      <td mat-cell *matCellDef="let element" style="width: 50%">{{element.lead | participant}}</td>
     </ng-container>
 
     <ng-container matColumnDef="follow">
-      <td mat-cell *matCellDef="let element">{{element.follow}}</td>
+      <td mat-cell *matCellDef="let element" style="width: 50%">{{element.follow | participant}}</td>
     </ng-container>
 
     <ng-container matColumnDef="points">
-      <td mat-cell *matCellDef="let element; index as coupleIdx" class="no-print">
+      <td mat-cell *matCellDef="let element; index as coupleIdx" class="no-print" style="width: 75px">
         {{ element.points | number:'1.4' }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="switches">
-      <td mat-cell *matCellDef="let element; index as coupleIdx" class="no-print">
+      <td mat-cell *matCellDef="let element; index as coupleIdx" class="no-print" style="width: 75px">
         <mat-slide-toggle [formControl]="formArray.at(heatIdx).at(coupleIdx)"></mat-slide-toggle>
       </td>
     </ng-container>
