--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -18,14 +18,14 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
-      <button type="button" mat-icon-button (click)="participantsService.removeParticipant(element).subscribe()">
+      <button type="button" mat-icon-button (click)="removeParticipant(element)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns | async"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns | async;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns | async;" [class]="drawnParticipants.includes(row.id) ? 'drawn-participant': null"></tr>
 </table>
 
 <mat-card class="main-card" *ngIf="!(participantsService.locked | async)">
@@ -72,10 +72,15 @@
   </mat-card-header>
   <mat-card-content>
     <p>In order to start the first round, you have to lock the participants. Once started, the participants can only be edited by resetting the competion.</p>
-    <p *ngIf="((participantsService.balance | async) ?? 0) > 0">Unbalanced participants: There are {{ participantsService.balance | async}} more leads than follows.</p>
-    <p *ngIf="((participantsService.balance | async) ?? 0) < 0">Unbalanced participants: There are {{ -((participantsService.balance | async) ?? 0) }} more follows than leads.</p>
+    <p *ngIf="((participantsService.balance | async) ?? 0) > 0" style="color: var(--mdc-filled-text-field-error-label-text-color)">
+      Unbalanced participants: There are {{ participantsService.balance | async}} more leads than follows.</p>
+    <p *ngIf="((participantsService.balance | async) ?? 0) < 0" style="color: var(--mdc-filled-text-field-error-label-text-color)">
+      Unbalanced participants: There are {{ -((participantsService.balance | async) ?? 0) }} more follows than leads.</p>
   </mat-card-content>
   <mat-card-actions align="end">
+    <button mat-raised-button color="primary" class="flex-auto" type="button" (click)="drawParticipants()" *ngIf="(participantsService.balance | async) !== 0 && drawnParticipants.length == 0">
+        Draw participants for removal
+    </button>
     <button mat-raised-button color="primary" class="flex-auto" type="button" (click)="participantsService.lock().subscribe()" [disabled]="(participantsService.balance | async) !== 0">
       Lock participants
     </button>
