--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  --color-text-primary: #673ab7;
+  --color-text-disabled: #e0e0e0;
+  --color-text-error: #f44336;
+}
 
 .flex-row {
   display: flex;
